src/log
edit_source.c(171): warning #170: pointer points outside of underlying object
                  tmp = yytext - 1;
                               ^

edit_source.c(182): warning #170: pointer points outside of underlying object
                  tmp = yytext - 1;
                               ^

preprocess.c(232): warning #170: pointer points outside of underlying object
          if (!(x = optab1[c])) {
                    ^

preprocess.c(306): warning #170: pointer points outside of underlying object
          if (!(x = optab1[c]))
                    ^

edit_source.c(1118): warning #880: omission of explicit type is nonstandard ("int" assumed)
  static handle_applies() {
         ^

make_func.y(106): warning #266: function declared implicitly
                            yyerror("Illegal default");
                            ^

make_func.y(166): warning #266: function declared implicitly
  		    yyerror("Array 'arg_types' is too small");
  		    ^

make_func.y(203): warning #266: function declared implicitly
  		yyerror(buf);
  		^

make_func.y(217): warning #266: function declared implicitly
  	    yyerror("Too many arguments");
  	    ^

make_func.y(225): warning #266: function declared implicitly
  		yyerror("Too many arguments");
  		^

y.tab.c(1359): warning #266: function declared implicitly
  	yyerror ("syntax error");
  	^

y.tab.c(1477): warning #266: function declared implicitly
    yyerror ("parser stack overflow");
    ^

make_func.y(257): warning #266: function declared implicitly
  	default: yyerror("Bad type!");
  	         ^

make_func.y(287): warning #266: function declared implicitly
  	yyerror("Illegal type for argument");
  	^

make_func.y(400): warning #266: function declared implicitly
  	    yyerror("Too long indentifier");
  	    ^

Writing build options to option_defs.c ...
Building compiler files ...
Creating 'grammar.y' from 'grammar.y.pre' ...
Creating 'packages/Makefile' from 'packages/Makefile.pre' ...
Creating 'packages/GNUmakefile' from 'packages/GNUmakefile.pre' ...
Creating 'mudlib/Makefile' from 'mudlib/Makefile.pre' ...
Creating 'mudlib/GNUmakefile' from 'mudlib/GNUmakefile.pre' ...
Building efun tables ...
db.h(64): error: identifier "MYSQL" is undefined
          MYSQL *handle;
          ^

db.h(65): error: identifier "MYSQL_RES" is undefined
          MYSQL_RES *results;
          ^

db.c(135): warning #1011: missing return statement at end of non-void function "valid_database"
  }
  ^

db.c(518): warning #1011: missing return statement at end of non-void function "create_db_conn"
  }
  ^

db.c(543): warning #266: function declared implicitly
  	mysql_free_result(c->mysql.results);
  	^

db.c(554): warning #266: function declared implicitly
      return string_copy(mysql_error(c->mysql.handle), "MySQL_errormsg:2");
             ^

db.c(554): warning #167: argument of type "int" is incompatible with parameter of type "const char *const"
      return string_copy(mysql_error(c->mysql.handle), "MySQL_errormsg:2");
             ^

db.c(559): warning #266: function declared implicitly
      mysql_close(c->mysql.handle);
      ^

db.c(568): warning #266: function declared implicitly
      if (!mysql_query(c->mysql.handle, s)) {
           ^

db.c(569): warning #266: function declared implicitly
  	c->mysql.results = mysql_store_result(c->mysql.handle);
  	                   ^

db.c(569): warning #556: a value of type "int" cannot be assigned to an entity of type "<error-type> *"
  	c->mysql.results = mysql_store_result(c->mysql.handle);
  	                 ^

db.c(571): warning #266: function declared implicitly
  	    return mysql_num_rows(c->mysql.results);
  	           ^

db.c(575): warning #266: function declared implicitly
  	if (!mysql_errno(c->mysql.handle)) {
  	     ^

db.c(586): error: identifier "MYSQL_ROW" is undefined
      MYSQL_ROW target_row;
      ^

db.c(592): warning #266: function declared implicitly
      if (row < 0 || row > mysql_num_rows(c->mysql.results)) {
                           ^

db.c(596): warning #266: function declared implicitly
      num_fields = mysql_num_fields(c->mysql.results);
                   ^

db.c(602): warning #266: function declared implicitly
        mysql_data_seek(c->mysql.results, row - 1);
        ^

db.c(603): warning #266: function declared implicitly
        target_row = mysql_fetch_row(c->mysql.results);
                     ^

db.c(611): error: identifier "MYSQL_FIELD" is undefined
  	MYSQL_FIELD *field;
  	^

db.c(611): error: identifier "field" is undefined
  	MYSQL_FIELD *field;
  	             ^

db.c(613): warning #266: function declared implicitly
  	field = mysql_fetch_field(c->mysql.results);
  	        ^

db.c(616): error: expected an expression
  	  if (field == (MYSQL_FIELD *)NULL) {
  	                             ^

db.c(616): error: expected a ")"
  	  if (field == (MYSQL_FIELD *)NULL) {
  	                              ^

db.c(630): error: identifier "FIELD_TYPE_TINY" is undefined
  		case FIELD_TYPE_TINY:
  		     ^

db.c(631): error: identifier "FIELD_TYPE_SHORT" is undefined
  		case FIELD_TYPE_SHORT:
  		     ^

db.c(632): error: identifier "FIELD_TYPE_DECIMAL" is undefined
  		case FIELD_TYPE_DECIMAL:
  		     ^

db.c(633): error: identifier "FIELD_TYPE_LONG" is undefined
  		case FIELD_TYPE_LONG:
  		     ^

db.c(638): error: identifier "FIELD_TYPE_FLOAT" is undefined
  		case FIELD_TYPE_FLOAT:
  		     ^

db.c(639): error: identifier "FIELD_TYPE_DOUBLE" is undefined
  		case FIELD_TYPE_DOUBLE:
  		     ^

db.c(644): error: identifier "FIELD_TYPE_TINY_BLOB" is undefined
  		case FIELD_TYPE_TINY_BLOB:
  		     ^

db.c(645): error: identifier "FIELD_TYPE_MEDIUM_BLOB" is undefined
  		case FIELD_TYPE_MEDIUM_BLOB:
  		     ^

db.c(646): error: identifier "FIELD_TYPE_LONG_BLOB" is undefined
  		case FIELD_TYPE_LONG_BLOB:
  		     ^

db.c(647): error: identifier "FIELD_TYPE_BLOB" is undefined
  		case FIELD_TYPE_BLOB:
  		     ^

db.c(648): error: identifier "FIELD_TYPE_STRING" is undefined
  		case FIELD_TYPE_STRING:
  		     ^

db.c(649): error: identifier "FIELD_TYPE_VAR_STRING" is undefined
  		case FIELD_TYPE_VAR_STRING:
  		     ^

db.c(650): error: identifier "BINARY_FLAG" is undefined
                      if (field->flags & BINARY_FLAG) {
                                         ^

db.c(677): warning #266: function declared implicitly
      mysql_field_seek(c->mysql.results, 0);
      ^

db.c(684): error: identifier "MYSQL" is undefined
      MYSQL *tmp;
      ^

db.c(684): error: identifier "tmp" is undefined
      MYSQL *tmp;
             ^

db.c(686): error: expected an expression
      tmp = ALLOCATE(MYSQL, TAG_DB, "MySQL_connect");
            ^

db.c(686): error: expected a ")"
      tmp = ALLOCATE(MYSQL, TAG_DB, "MySQL_connect");
            ^

db.c(689): warning #266: function declared implicitly
      c->mysql.handle = mysql_connect(tmp, host, username, password);
                        ^

db.c(689): warning #556: a value of type "int" cannot be assigned to an entity of type "<error-type> *"
      c->mysql.handle = mysql_connect(tmp, host, username, password);
                      ^

db.c(691): warning #266: function declared implicitly
  	strncpy(c->mysql.errormsg, mysql_error(tmp), sizeof(c->mysql.errormsg));
  	                           ^

db.c(691): warning #167: argument of type "int" is incompatible with parameter of type "const char *restrict"
  	strncpy(c->mysql.errormsg, mysql_error(tmp), sizeof(c->mysql.errormsg));
  	                           ^

db.c(697): warning #266: function declared implicitly
      ret = mysql_select_db(c->mysql.handle, database);
            ^

db.c(699): warning #266: function declared implicitly
  	strncpy(c->mysql.errormsg, mysql_error(c->mysql.handle), sizeof(c->mysql.errormsg));
  	                           ^

db.c(699): warning #167: argument of type "int" is incompatible with parameter of type "const char *restrict"
  	strncpy(c->mysql.errormsg, mysql_error(c->mysql.handle), sizeof(c->mysql.errormsg));
  	                           ^

db.c(701): warning #266: function declared implicitly
  	mysql_close(c->mysql.handle);
  	^

compilation aborted for db.c (code 2)
gmake[1]: *** [../obj/db.o] Error 2
make: *** [packages/packages.a] Error 2
